waters endpoints
